correzione test homework 1